--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://mahamadimsad.github.io/Ktm-Furniture/",
   "name": "ecommerce-app",
   "private": true,
   "version": "0.0.0",
